- Able to build container images with these changes    - ./build-all.sh  - There was an error in between - unable to extract contiv-init    - Workaround is to manually run "make contiv-init" in the build container    - Then run ./build-all.sh again  - $ docker image ls | grep amd64    contivvpp/ui-amd64             v3.4.2-2-ga1aad6eec      9eb1523424ba  13.5MB    contivvpp/stn-amd64            v3.4.2-2-ga1aad6eec      b7a7cf0ef3c8  10.4MB    contivvpp/ksr-amd64            v3.4.2-2-ga1aad6eec      da1cc3810473  33.7MB    contivvpp/crd-amd64            v3.4.2-2-ga1aad6eec      39ff42b0bb95  95.4MB    contivvpp/cni-amd64            v3.4.2-2-ga1aad6eec      528cc96418ba  28.7MB    contivvpp/vswitch-amd64        v3.4.2-2-ga1aad6eec      d2c5bbcd531e  341MB    contivvpp/dev-vswitch-amd64    v3.4.2-2-ga1aad6eec      799c973937ef  4.07GB    contivvpp/dev-vswitch-amd64    v3.4.2-2-ga1aad6eec-e..  799c973937ef  4.07GB    contivvpp/vpp-binaries-amd64   ec9ce338f05fb8bc90908..  133d06ba384d  107MB    contivvpp/vpp-amd64            ec9ce338f05fb8bc90908..  c5c245273e6f  3.01GB

--- a/docker/vpp-cni/Dockerfile.arm64
+++ b/docker/vpp-cni/Dockerfile.arm64
@@ -5,7 +5,7 @@ ENV CGO_ENABLED=0
 
 RUN apk add --update wget git make gcc linux-headers libc-dev
 
-COPY . /go/src/github.com/contiv/vpp
+COPY . /go/src/github.com/Shivkb/contiv-vpp
 
 # we need the loopback binary from CNI
 # this binary can be obtained from the cni tarball
@@ -20,10 +20,10 @@ RUN export CNI_PLUGIN_VERSION=0.7 \
  && cd /go/src/github.com/containernetworking \
  && git clone https://github.com/containernetworking/plugins.git -b v$CNI_PLUGIN_VERSION \
  && cd plugins/plugins/meta/portmap/ \
- && git apply /go/src/github.com/contiv/vpp/docker/vpp-cni/portmap.diff \
+ && git apply /go/src/github.com/Shivkb/contiv-vpp/docker/vpp-cni/portmap.diff \
  && go build -ldflags '-s -w' -o /portmap
 
-WORKDIR /go/src/github.com/contiv/vpp
+WORKDIR /go/src/github.com/Shivkb/contiv-vpp
 
 # build contiv-cni
 RUN make contiv-cni
@@ -34,8 +34,8 @@ RUN mkdir -p /output/cni/bin && mkdir -p /output/cni/cfg \
  && cp cmd/contiv-cni/contiv-cni /output/cni/bin/ \
  && cp /cni/loopback /output/cni/bin/ \
  && cp /portmap /output/cni/bin/ \
- && cp /go/src/github.com/contiv/vpp/docker/vpp-cni/install.sh /output/cni/ \
- && cp /go/src/github.com/contiv/vpp/docker/vpp-cni/10-contiv-vpp.conflist /output/cni/cfg/
+ && cp /go/src/github.com/Shivkb/contiv-vpp/docker/vpp-cni/install.sh /output/cni/ \
+ && cp /go/src/github.com/Shivkb/contiv-vpp/docker/vpp-cni/10-contiv-vpp.conflist /output/cni/cfg/
 
 FROM arm64v8/alpine:3.8
 
