--- a/docker/vpp-crd/Dockerfile
+++ b/docker/vpp-crd/Dockerfile
@@ -8,15 +8,15 @@ ENV GO_BUILD_TAGS=mockvpp
 
 RUN apk add --update git make
 
-COPY . /go/src/github.com/contiv/vpp
+COPY . /go/src/github.com/Shivkb/contiv-vpp
 
-WORKDIR /go/src/github.com/contiv/vpp
+WORKDIR /go/src/github.com/Shivkb/contiv-vpp
 
 RUN make contiv-crd && make contiv-netctl
 
 FROM alpine:3.8
 
-COPY --from=builder /go/src/github.com/contiv/vpp/cmd/contiv-crd/contiv-crd /contiv-crd
-COPY --from=builder /go/src/github.com/contiv/vpp/cmd/contiv-netctl/contiv-netctl /contiv-netctl
+COPY --from=builder /go/src/github.com/Shivkb/contiv-vpp/cmd/contiv-crd/contiv-crd /contiv-crd
+COPY --from=builder /go/src/github.com/Shivkb/contiv-vpp/cmd/contiv-netctl/contiv-netctl /contiv-netctl
 
 ENTRYPOINT ["/contiv-crd"]
