--- a/docker/vpp-ksr/Dockerfile
+++ b/docker/vpp-ksr/Dockerfile
@@ -5,14 +5,14 @@ ENV CGO_ENABLED=0
 
 RUN apk add --update git make
 
-COPY . /go/src/github.com/contiv/vpp
+COPY . /go/src/github.com/Shivkb/contiv-vpp
 
-WORKDIR /go/src/github.com/contiv/vpp
+WORKDIR /go/src/github.com/Shivkb/contiv-vpp
 
 RUN make contiv-ksr
 
 FROM scratch
 
-COPY --from=builder /go/src/github.com/contiv/vpp/cmd/contiv-ksr/contiv-ksr /contiv-ksr
+COPY --from=builder /go/src/github.com/Shivkb/contiv-vpp/cmd/contiv-ksr/contiv-ksr /contiv-ksr
 
 ENTRYPOINT ["/contiv-ksr"]
