--- a/docker/development/Dockerfile.metalinter
+++ b/docker/development/Dockerfile.metalinter
@@ -6,9 +6,9 @@ RUN apk add --no-cache git
 RUN go get -u gopkg.in/alecthomas/gometalinter.v2
 RUN gometalinter.v2 --install
 
-COPY . /go/src/github.com/contiv/vpp
+COPY . /go/src/github.com/Shivkb/contiv-vpp
 
-WORKDIR /go/src/github.com/contiv/vpp
+WORKDIR /go/src/github.com/Shivkb/contiv-vpp
 
 # --vendor doesn't 100% properly exclude the vendor dir, so manually exclude it
 ENTRYPOINT ["gometalinter.v2", "--vendor", "--exclude", "vendor", "./..."]
